test_programs/compile_failure/noirc_frontend_tests_numeric_generic_as_param_type/src/main.nr

    pub fn foo<let I: u32>(x: I) -> I {
                                    

        let _q: I = 5;
        x
    }
    